methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:20: error: not found: value doite
  doite()
  ^